RESOLVED FIXED 126887
[CSS Background Blending] Background layer with -webkit-cross-fade doesn't blend
https://bugs.webkit.org/show_bug.cgi?id=126887
Summary [CSS Background Blending] Background layer with -webkit-cross-fade doesn't blend
Mihai Tica
Reported 2014-01-13 06:50:30 PST
Applying -webkit-background-blend-mode on a background layer with -webkit-cross-fade set doesn't have any effect.
Attachments
Patch for review (5.07 KB, patch)
2014-01-14 02:18 PST, Mihai Tica
no flags
Includes tests using rectangles instead of circles (6.26 KB, patch)
2014-01-15 02:08 PST, Mihai Tica
no flags
Patch (6.24 KB, patch)
2014-01-15 03:50 PST, Mihai Tica
no flags
Patch (6.24 KB, patch)
2014-01-15 04:03 PST, Mihai Tica
no flags
Mark test as ImageOnlyFailure for mac (7.27 KB, patch)
2014-01-16 03:58 PST, Mihai Tica
no flags
Mihai Tica
Comment 1 2014-01-14 02:18:47 PST
Created attachment 221131 [details] Patch for review
Dirk Schulze
Comment 2 2014-01-14 07:22:40 PST
Comment on attachment 221131 [details] Patch for review r=me
WebKit Commit Bot
Comment 3 2014-01-14 07:37:26 PST
Comment on attachment 221131 [details] Patch for review Clearing flags on attachment: 221131 Committed r161965: <http://trac.webkit.org/changeset/161965>
WebKit Commit Bot
Comment 4 2014-01-14 07:37:28 PST
All reviewed patches have been landed. Closing bug.
Mihai Tica
Comment 6 2014-01-15 02:08:29 PST
Created attachment 221246 [details] Includes tests using rectangles instead of circles Adding a new version of the patch which also tests the hardware path. This version of the tests uses rects instead of circles. Skipping elf for now.
Dirk Schulze
Comment 7 2014-01-15 03:33:20 PST
Comment on attachment 221246 [details] Includes tests using rectangles instead of circles View in context: https://bugs.webkit.org/attachment.cgi?id=221246&action=review > LayoutTests/css3/compositing/background-blend-mode-crossfade-image.html:12 > + <svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 100 100"> \ usually saver to use width="100" height="100" since this does not cause transforms. Also, the version attribute is not necessary. > LayoutTests/css3/compositing/background-blend-mode-crossfade-image.html:17 > + <rect width="100" height="100" fill="#777"/> \ Does the issue occur on 100% opacity as well? Could you use a different color that is more likely to produce a stable color results as you did for bug 118894?
Mihai Tica
Comment 8 2014-01-15 03:50:38 PST
Created attachment 221257 [details] Patch Test should now show lime (#0f0) rectangles when passing, and red (#f00) when failing.
Mihai Tica
Comment 9 2014-01-15 04:03:50 PST
Created attachment 221258 [details] Patch Adding 100% opacity doesn't change the followed code path, adding this value instead.
Mihai Tica
Comment 10 2014-01-16 03:58:13 PST
Created attachment 221361 [details] Mark test as ImageOnlyFailure for mac Mark test as ImageOnlyFailure Pass for mac due to the slight differences between blending and the formula result.
Dirk Schulze
Comment 11 2014-01-20 08:03:27 PST
Comment on attachment 221361 [details] Mark test as ImageOnlyFailure for mac r=me
WebKit Commit Bot
Comment 12 2014-01-20 08:32:02 PST
Comment on attachment 221361 [details] Mark test as ImageOnlyFailure for mac Clearing flags on attachment: 221361 Committed r162348: <http://trac.webkit.org/changeset/162348>
WebKit Commit Bot
Comment 13 2014-01-20 08:32:05 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.